--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ next-env.d.ts
 tests/visual-regression/test_data/bitmaps_test
 tests/visual-regression/test_data/html_report
 tests/visual-regression/node_modules
+
+# app builder
+.env
+.aio
+dist/
